--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,13 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/start.js"
+      "program": "${workspaceFolder}/start.js",
+      "args": [
+        "--pages",
+        "input/list.txt",
+        "--download",
+        "--test"
+      ]
     }
   ]
 }
